package main

import (
	"log"
	"net"
	"os"

	"google.golang.org/grpc"
	"google.golang.org/grpc/reflection"

	pb "github.com/adamtc007/KYC-DSL/api/pb"
	"github.com/adamtc007/KYC-DSL/internal/service"
	"github.com/adamtc007/KYC-DSL/internal/storage"
)

func main() {
	log.Println("üöÄ Starting gRPC Server...")

	// Check OpenAI API key
	if os.Getenv("OPENAI_API_KEY") == "" {
		log.Fatal("‚ùå OPENAI_API_KEY environment variable not set")
	}

	// Connect to database
	log.Println("üìä Connecting to PostgreSQL...")
	db, err := storage.ConnectPostgres()
	if err != nil {
		log.Fatalf("‚ùå Failed to connect to database: %v", err)
	}
	defer db.Close()

	if err := db.Ping(); err != nil {
		log.Fatalf("‚ùå Database ping failed: %v", err)
	}
	log.Println("‚úÖ Database connected successfully")

	// Create gRPC server
	grpcSrv := grpc.NewServer()

	// Register services
	pb.RegisterKycCaseServiceServer(grpcSrv, service.NewKycCaseService(db))
	pb.RegisterDslServiceServer(grpcSrv, service.NewDslService(db))
	pb.RegisterRagServiceServer(grpcSrv, service.NewRagService(db))
	pb.RegisterCbuGraphServiceServer(grpcSrv, service.NewCbuGraphService(db))

	// Enable reflection for grpcurl
	reflection.Register(grpcSrv)

	// Listen on port 50051
	lis, err := net.Listen("tcp", ":50051")
	if err != nil {
		log.Fatalf("‚ùå Failed to listen: %v", err)
	}

	log.Println("üåê gRPC server listening on :50051")
	log.Println()
	log.Println("üìã Available services:")
	log.Println("   ‚Ä¢ kyc.KycCaseService - Case management")
	log.Println("   ‚Ä¢ kyc.dsl.DslService - DSL operations")
	log.Println("   ‚Ä¢ kyc.rag.RagService - RAG & semantic search")
	log.Println("   ‚Ä¢ kyc.cbu.CbuGraphService - CBU organizational graphs")
	log.Println()
	log.Println("üí° Test with grpcurl:")
	log.Println("   grpcurl -plaintext localhost:50051 list")
	log.Println("   grpcurl -plaintext localhost:50051 kyc.rag.RagService/HealthCheck")
	log.Println("   grpcurl -plaintext localhost:50051 kyc.cbu.CbuGraphService/GetGraph '{\"cbu_id\":\"BLACKROCK-GLOBAL\"}'")
	log.Println()

	if err := grpcSrv.Serve(lis); err != nil {
		log.Fatalf("‚ùå Server failed: %v", err)
	}
}
